# libtorch_mobile_build

./: CMakeLists.txt  README.md  libtorch-test.cpp  libtorch-test.h
scripts/: bootstrap-android-cmake.sh  bootstrap-host-cmake.sh
